# docling-agent

./: .gitignore  CLAUDE.md  convert_paper.py  main.py  openwebui-interface.md  pyproject.toml
agent-service/: pyproject.toml
agent-service/agent_service/: main.py
agent-ui/: package-lock.json  package.json  tsconfig.json
agent-ui/src/app/: layout.tsx  page.tsx
app/agents/: document_agent.py
app/agents/tools/: documents.py
app/core/: config.py
app/service/: documents.py
data/outputs/: paper9111.doctags.txt  paper9111.html  paper9111.json  paper9111.md  paper9111.txt
tests/service/: test_document_service.py
tests/tools/: documents.py
